// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParentNavItem tests should render children correctly 1`] = `
<li>
  <a
    className="Link hasChildren"
    onClick={[Function]}
  >
    <span
      className="iconWrapper"
    >
      <FilterNone
        className="icon"
        size={21}
      />
    </span>
    <div
      className="Label"
    >
      label
    </div>
    <ChevronLeft
      className="chevron"
    />
  </a>
  <ul
    className="NestedList"
  >
    <NavItem
      key="0"
      label="child 1"
      location={
        Object {
          "pathname": "/to",
        }
      }
      to="/child1"
    />
    <NavItem
      key="1"
      label="child 2"
      location={
        Object {
          "pathname": "/to",
        }
      }
      to="/child2"
    />
  </ul>
</li>
`;

exports[`ParentNavItem tests should render correctly on mobile 1`] = `
<li>
  <a
    className="Link hasChildren mobile"
    onClick={[Function]}
  >
    <span
      className="iconWrapper"
    >
      <FilterNone
        className="icon"
        size={21}
      />
    </span>
    <div
      className="Label"
    >
      label
    </div>
    <ChevronLeft
      className="chevron"
    />
  </a>
  <ul
    className="NestedList"
  >
    <NavItem
      key="0"
      label="child 1"
      location={
        Object {
          "pathname": "/to",
        }
      }
      mobile={true}
      to="/child1"
    />
    <NavItem
      key="1"
      label="child 2"
      location={
        Object {
          "pathname": "/to",
        }
      }
      mobile={true}
      to="/child2"
    />
  </ul>
</li>
`;
